--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       POSTGRES_PASSWORD: saml
     ports:
       - "5432:5432"
+    volumes:
+      - pg_data:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U saml -d saml_demo"]
       interval: 5s
@@ -25,6 +27,11 @@ services:
       - "8081:8080"
     volumes:
       - ./keycloak/realm-demo.json:/opt/keycloak/data/import/realm-demo.json:ro
+      - keycloak_data:/opt/keycloak/data
     depends_on:
       postgres:
         condition: service_healthy
+
+volumes:
+  pg_data:
+  keycloak_data:
